<resources>
    <string name="app_name">JbCodersLtdChatAppTask</string>

    <!-- Login Screen String   -->
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <!-- Firestore Strings -->
    <string name="collection_users">Users</string>
    <string name="collection_chatrooms">Chatrooms</string>
    <string name="collection_chat_messages">Chat Messages</string>
    <string name="collection_chatroom_user_list">User List</string>
    <string name="collection_user_locations">User Locations</string>
    <string name="or">OR</string>
    <string name="register">Create New Chat Account</string>
    <string name="done">Done</string>
    <string name="name">Your Name</string>
    <string name="email">Your Email</string>
    <string name="register_a_new_account">Register a new account</string>

    <!-- Intent extras -->
    <string name="intent_chatroom">intent_chatroom</string>
    <string name="intent_user_list">intent_user_list</string>
    <string name="intent_user_locations">intent_user_locations</string>
    <string name="intent_location">intent_location</string>
    <string name="new_chat_room">new_chat_room</string>

    <!-- Fragments Names -->
    <string name="fragment_user_list">User List</string>
    <string name="fragment_image_list">Image List</string>

</resources>